visitor counter implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <nav class="nav bd-grid">
             <div>
                 <a href="#" class="nav__logo">Louay "Ta1wan" Belkhamsa</a>
+
             </div>
+            <div id="visitorCount" class="nav__logo">Loading visitor count...</div>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -216,6 +218,7 @@
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
