edited the frontend

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Louay "Ta1wan" Belkhamsa</a>
+                <a href="#" class="nav__logo">SmoothDevOperator</a>
 
             </div>
             <div id="visitorCount" class="nav__logo">Loading visitor count...</div>
@@ -44,7 +44,7 @@
         <!--===== HOME =====-->
         <section class="home" id="home">
             <div class="home__container bd-grid">
-                <h1 class="home__title"><span>HE</span><br>LLO.</h1>
+                <h1 class="home__title"><span>Dev</span><br>5ive</h1>
 
                 <div class="home__scroll">
                     <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt'></i>Scroll down</a>
@@ -60,17 +60,20 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/perfil.png" alt="">
+                    <img src="assets/img/pixel_lou_nobkg.png" alt="">
                 </div>
 
                 <div>
                     <h2 class="about__subtitle">I'm Louay Belkhamsa</h2>
-                    <span class="about__profession">Cloud Engineer / Solutions Architect</span>
-                    <p class="about__text">This is a placeholder website while I finish the networking part</p>
+                    <span class="about__profession">Cloud Engineer / Solutions Architect (Nearly)</span>
+                    <p class="about__text">I am a <b>DSI</b> (Déploiement de Systèmes d'Informations) student at
+                        <b>Télécom Sudparis</b>.
 
                     <div class="about__social">
-                        <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
-                        <a href="#" class="about__social-icon"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.linkedin.com/in/louay-belkhamsa/" class="about__social-icon"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/LouayBks" class="about__social-icon"><i
+                                class='bx bxl-github'></i></a>
                         <a href="#" class="about__social-icon"><i class='bx bxl-dribbble'></i></a>
                     </div>
                 </div>
@@ -83,73 +86,131 @@
 
             <div class="skills__container bd-grid">
                 <div class="skills__box">
-                    <h3 class="skills__subtitle">Development</h3>
-                    <span class="skills__name">Html</span>
-                    <span class="skills__name">Css</span>
-                    <span class="skills__name">Javascript</span>
-                    <span class="skills__name">Scss</span>
-                    <span class="skills__name">React</span>
-                    <span class="skills__name">Vue</span>
+                    <h3 class="skills__subtitle">Certifications</h3>
+                    <span class="skills__name">AWS Cloud Practitioner</span>
+                    <span class="skills__name">AWS CloudQuest Solutions Architect</span>
+                    <span class="skills__name">Red Hat Containers & Kubernetes 4.10</span>
+                    <span class="skills__name">Cambridge English C2</span>
 
-                    <h3 class="skills__subtitle">Design</h3>
-                    <span class="skills__name">Figma</span>
-                    <span class="skills__name">Adobe XD</span>
-                    <span class="skills__name">Photoshop</span>
+                    <h3 class="skills__subtitle">Cloud</h3>
+                    <span class="skills__name">AWS EC2</span>
+                    <span class="skills__name">AWS Lambda</span>
+                    <span class="skills__name">AWS ECS / EKS</span>
+                    <span class="skills__name">S3 / EBS / RDS</span>
+                    <span class="skills__name">DynamoDB</span>
+                    <span class="skills__name">IAM / KMS</span>
+                    <span class="skills__name">CloudFormation</span>
+                    <span class="skills__name">VPC / CloudWatch / CloudTrail</span>
+
+                    <h3 class="skills__subtitle">DevOps</h3>
+                    <span class="skills__name">Docker / Podman</span>
+                    <span class="skills__name">Kubernetes</span>
+                    <span class="skills__name">Helm</span>
+                    <span class="skills__name">Terraform</span>
+                    <span class="skills__name">GitHub Actions</span>
+                    <span class="skills__name">GitLab CI/CD</span>
+                    <span class="skills__name">Nginx / Ingress</span>
+
+                    <h3 class="skills__subtitle">Programming & Databases</h3>
+                    <span class="skills__name">Java</span>
+                    <span class="skills__name">Python</span>
+                    <span class="skills__name">JavaScript / PHP</span>
+                    <span class="skills__name">C / C++</span>
+                    <span class="skills__name">PostgreSQL / MySQL</span>
+                    <span class="skills__name">MongoDB / DynamoDB</span>
+
                 </div>
 
+
                 <div class="skills__img">
-                    <img src="assets/img/skill.jpg" alt="">
+                    <img src="assets/img/clouds.png" alt="">
                 </div>
             </div>
         </section>
+
+
+
 
         <!--===== PORTFOLIO =====-->
         <section class="portfolio section" id="portfolio">
             <h2 class="section-title">Portfolio</h2>
 
             <div class="portfolio__container bd-grid">
+                <!-- Project 1 -->
                 <div class="portfolio__img">
-                    <img src="assets/img/work1.jpg" alt="">
-
+                    <img src="assets/img/1.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work2.jpg" alt="">
+                <div class="portfolio__description">
+                    <h2>Cloud Resume Challenge</h2>
+                    <ul>
+                        <li>Hosted this website with Amazon S3, distributed via CloudFront with HTTPS.</li>
+                        <li>Deployed CI/CD pipelines for frontend and backend with GitHub Actions.</li>
+                        <li>Created an API with AWS Lambda (Python) and API Gateway, connected to DynamoDB to record
+                            visitor count.</li>
+                        <li>Defined the infrastructure using Terraform.</li>
+                    </ul>
+                </div>
 
+
+                <!-- Project 2 -->
+                <div class="portfolio__img">
+                    <img src="assets/img/2.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work3.jpg" alt="">
+                <div class="portfolio__description">
+                    <h2>QR Code Generator on EKS</h2>
+                    <ul>
+                        <li>Dockerized a Python & Next.js application.</li>
+                        <li>Automated CI/CD with GitHub Actions to Docker Hub.</li>
+                        <li>Deployed on EKS using Helm and Terraform.</li>
+                        <li>Configured Kubernetes for scalability and resilience.</li>
+                    </ul>
+                </div>
 
+                <!-- Project 3 -->
+                <div class="portfolio__img">
+                    <img src="assets/img/3.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work4.jpg" alt="">
+                <div class="portfolio__description">
+                    <h2>Flask App with K8s High Availability</h2>
+                    <ul>
+                        <li>Developed a Flask app connected to MongoDB and Dockerized it.</li>
+                        <li>Deployed on Kubernetes, managing traffic via Nginx & Ingress.</li>
+                        <li>Automated deployment with Helm and Terraform.</li>
+                        <li>Implemented Auto-Scaling, Network Policies, and StatefulSets for resilience.</li>
+                    </ul>
+                </div>
 
+
+                <!-- Project 4 -->
+                <div class="portfolio__img">
+                    <img src="assets/img/4.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work5.jpg" alt="">
-
-                    <div class="portfolio__link">
-                        <a href="#" class="portfolio__link-name">View details</a>
-                    </div>
+                <div class="portfolio__description">
+                    <h2>Security Analysis of Certificate Protocol</h2>
+                    <ul>
+                        <li>Conducted security analysis of a C-ITS certificate management protocol.</li>
+                        <li>Modeled attack scenarios and researched vulnerabilities.</li>
+                        <li>Performed formal verification with Scyther.</li>
+                    </ul>
                 </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work6.jpg" alt="">
 
-                    <div class="portfolio__link">
-                        <a href="#" class="portfolio__link-name">View details</a>
-                    </div>
-                </div>
+
+
+
+
+
             </div>
         </section>
 
@@ -160,16 +221,16 @@
             <div class="contact__container bd-grid">
                 <div class="contact__info">
                     <h3 class="contact__subtitle">EMAIL</h3>
-                    <span class="contact__text">info.mail.com</span>
+                    <span class="contact__text">louay.belkhamsa@telecom-sudparis.eu</span>
 
                     <h3 class="contact__subtitle">PHONE</h3>
-                    <span class="contact__text">+20 999-999</span>
+                    <span class="contact__text">+33 7 59 83 14 07</span>
 
-                    <h3 class="contact__subtitle">ADRESS</h3>
-                    <span class="contact__text">My contry</span>
+                    <h3 class="contact__subtitle">ADDRESS</h3>
+                    <span class="contact__text">Paris, Île-de-France, France</span>
                 </div>
 
-                <form action="" class="contact__form">
+                <!-- <form action="" class="contact__form">
                     <div class="contact__inputs">
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
@@ -178,7 +239,7 @@
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
                     <input type="submit" value="Enviar" class="contact__button">
-                </form>
+                </form> -->
             </div>
         </section>
     </main>
@@ -187,8 +248,8 @@
     <footer class="footer section">
         <div class="footer__container bd-grid">
             <div class="footer__data">
-                <h2 class="footer__title">JHON DOE</h2>
-                <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
+                <h2 class="footer__title">Special Thanks!</h2>
+                <p class="footer__text">To <b>Bedimcode</b> for making this template!</p>
             </div>
 
             <div class="footer__data">
@@ -204,9 +265,10 @@
 
             <div class="footer__data">
                 <h2 class="footer__title">FOLLOW</h2>
-                <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.facebook.com/f323434b333532/" class="footer__social"><i
+                        class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/lou_belkhamsa/" class="footer__social"><i
+                        class='bx bxl-instagram'></i></a>
             </div>
 
 
